# MyMacros

./: BMR.py  Goal.py  PersonMetrics.py  UnitConversions.py  main.py  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: mv2z3qhgh6jdrm5zdc7zy3mi50jgld50-source  n67nldl8x3f44w9mvk5zvij0q1rwnsmq-source
