[tool.poetry]
name = "mymacros"
version = "0.1.0"
description = ""
authors = ["Taylor Henderson <tph5595@verizon.net>"]
license = "GNU AGPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
